User generated decks can now be selected and viewed in the table
